welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:13: error: reassignment to val
  nbPas=nbPas+1
       ^